documentation/docfx/releases/1.68.1/index.md
# API diff: 1.68.1

> Back to [release notes](../1.68.1.md).

## SkiaSharp

- [SkiaSharp.humanreadable](SkiaSharp/SkiaSharp.humanreadable.md)
- [SkiaSharp](SkiaSharp/SkiaSharp.md) — ⚠️ breaking

## SkiaSharp.HarfBuzz

- [SkiaSharp.HarfBuzz](SkiaSharp.HarfBuzz/SkiaSharp.HarfBuzz.md)

## SkiaSharp.Views

- [SkiaSharp.Views.Android](SkiaSharp.Views/SkiaSharp.Views.Android.md)
- [SkiaSharp.Views.Desktop](SkiaSharp.Views/SkiaSharp.Views.Desktop.md) — ⚠️ breaking
- [SkiaSharp.Views.Mac](SkiaSharp.Views/SkiaSharp.Views.Mac.md)
- [SkiaSharp.Views.Tizen](SkiaSharp.Views/SkiaSharp.Views.Tizen.md)
- [SkiaSharp.Views.UWP](SkiaSharp.Views/SkiaSharp.Views.UWP.md)
- [SkiaSharp.Views.iOS](SkiaSharp.Views/SkiaSharp.Views.iOS.md)
- [SkiaSharp.Views.tvOS](SkiaSharp.Views/SkiaSharp.Views.tvOS.md)
- [SkiaSharp.Views.watchOS](SkiaSharp.Views/SkiaSharp.Views.watchOS.md)

## SkiaSharp.Views.Desktop.Common

- [SkiaSharp.Views.Desktop.Common](SkiaSharp.Views.Desktop.Common/SkiaSharp.Views.Desktop.Common.md)

## SkiaSharp.Views.Forms

- [SkiaSharp.Views.Forms](SkiaSharp.Views.Forms/SkiaSharp.Views.Forms.md)

## SkiaSharp.Views.Forms.WPF

- [SkiaSharp.Views.Forms](SkiaSharp.Views.Forms.WPF/SkiaSharp.Views.Forms.md)

## SkiaSharp.Views.Gtk2

- [SkiaSharp.Views.Gtk](SkiaSharp.Views.Gtk2/SkiaSharp.Views.Gtk.md)

## SkiaSharp.Views.Gtk3

- [SkiaSharp.Views.Gtk3](SkiaSharp.Views.Gtk3/SkiaSharp.Views.Gtk3.md)

## SkiaSharp.Views.WPF

- [SkiaSharp.Views.WPF](SkiaSharp.Views.WPF/SkiaSharp.Views.WPF.md)

## SkiaSharp.Views.WindowsForms

- [SkiaSharp.Views.WindowsForms](SkiaSharp.Views.WindowsForms/SkiaSharp.Views.WindowsForms.md)

