documentation/docfx/releases/2.88.0/index.md
# API diff: 2.88.0

> Back to [release notes](../2.88.0.md).

## SkiaSharp

- [SkiaSharp](SkiaSharp/SkiaSharp.md) — ⚠️ breaking

## SkiaSharp.HarfBuzz

- [SkiaSharp.HarfBuzz](SkiaSharp.HarfBuzz/SkiaSharp.HarfBuzz.md)

## SkiaSharp.Views

- [SkiaSharp.Views.Android](SkiaSharp.Views/SkiaSharp.Views.Android.md)
- [SkiaSharp.Views.Desktop](SkiaSharp.Views/SkiaSharp.Views.Desktop.md)
- [SkiaSharp.Views.Mac](SkiaSharp.Views/SkiaSharp.Views.Mac.md)
- [SkiaSharp.Views.Tizen](SkiaSharp.Views/SkiaSharp.Views.Tizen.md)
- [SkiaSharp.Views.UWP](SkiaSharp.Views/SkiaSharp.Views.UWP.md)
- [SkiaSharp.Views.iOS](SkiaSharp.Views/SkiaSharp.Views.iOS.md) — ⚠️ breaking
- [SkiaSharp.Views.tvOS](SkiaSharp.Views/SkiaSharp.Views.tvOS.md) — ⚠️ breaking
- [SkiaSharp.Views.watchOS](SkiaSharp.Views/SkiaSharp.Views.watchOS.md)

## SkiaSharp.Views.Blazor

- [SkiaSharp.Views.Blazor](SkiaSharp.Views.Blazor/SkiaSharp.Views.Blazor.md)

## SkiaSharp.Views.Desktop.Common

- [SkiaSharp.Views.Desktop.Common](SkiaSharp.Views.Desktop.Common/SkiaSharp.Views.Desktop.Common.md)

## SkiaSharp.Views.Forms

- [SkiaSharp.Views.Forms](SkiaSharp.Views.Forms/SkiaSharp.Views.Forms.md) — ⚠️ breaking

## SkiaSharp.Views.Forms.GTK

- [SkiaSharp.Views.Forms](SkiaSharp.Views.Forms.GTK/SkiaSharp.Views.Forms.md)

## SkiaSharp.Views.Forms.WPF

- [SkiaSharp.Views.Forms](SkiaSharp.Views.Forms.WPF/SkiaSharp.Views.Forms.md)

## SkiaSharp.Views.Gtk2

- [SkiaSharp.Views.Gtk](SkiaSharp.Views.Gtk2/SkiaSharp.Views.Gtk.md)

## SkiaSharp.Views.Gtk3

- [SkiaSharp.Views.Gtk3](SkiaSharp.Views.Gtk3/SkiaSharp.Views.Gtk3.md)

## SkiaSharp.Views.Maui.Controls

- [SkiaSharp.Views.Maui.Controls](SkiaSharp.Views.Maui.Controls/SkiaSharp.Views.Maui.Controls.md)

## SkiaSharp.Views.Maui.Controls.Compatibility

- [SkiaSharp.Views.Maui.Controls.Compatibility](SkiaSharp.Views.Maui.Controls.Compatibility/SkiaSharp.Views.Maui.Controls.Compatibility.md)

## SkiaSharp.Views.Maui.Core

- [SkiaSharp.Views.Maui.Core](SkiaSharp.Views.Maui.Core/SkiaSharp.Views.Maui.Core.md)

## SkiaSharp.Views.Uno

- [SkiaSharp.Views.UWP](SkiaSharp.Views.Uno/SkiaSharp.Views.UWP.md)

## SkiaSharp.Views.WPF

- [SkiaSharp.Views.WPF](SkiaSharp.Views.WPF/SkiaSharp.Views.WPF.md)

## SkiaSharp.Views.WinUI

- [SkiaSharp.Views.Windows](SkiaSharp.Views.WinUI/SkiaSharp.Views.Windows.md)

## SkiaSharp.Views.WindowsForms

- [SkiaSharp.Views.WindowsForms](SkiaSharp.Views.WindowsForms/SkiaSharp.Views.WindowsForms.md)

## SkiaSharp.Vulkan.SharpVk

- [SkiaSharp.Vulkan.SharpVk](SkiaSharp.Vulkan.SharpVk/SkiaSharp.Vulkan.SharpVk.md)

